# pipeline-codegen

./: .env.example  .gitignore  README.md  codegen_plan.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  error-taxonomy.md  kb-service-runbook.md
profiles/dagster/: 1.8.json
profiles/kestra/: 0.18.json
profiles/kubeflow/: 1.0.stub.json
profiles/kubernetes/: 1.0.stub.json
samples/generated_workflows_proof/: README.md  verification_summary.json
samples/opos_codegen_inputs/: ok_notifier.opos.yaml  ok_parallel_like_dag.opos.yaml  ok_sequential.opos.yaml
samples/opos_e2e_suite/: README.md  airflow_ops_mix.opos.yaml  dagster_fanout_quality.opos.yaml  kestra_ingest_notify.opos.yaml  prefect_ml_lifecycle.opos.yaml
schemas/: target_ir_v1.json
scripts/: generate_suite_proofs.py
src/pipeline_codegen/: __init__.py  api.py  errors.py  io.py  types.py
src/pipeline_codegen/adapters/: base.py  targets.py
src/pipeline_codegen/cli/: generate.py
src/pipeline_codegen/core/: orchmapper.py  profiles.py  target_ir.py
src/pipeline_codegen/generation/: declarative.py  renderer.py
src/pipeline_codegen/kb/: __init__.py  client.py  resolver.py
src/pipeline_codegen/kb_service/: __init__.py  app.py  auth.py  exa_client.py  packs.py  schemas.py  settings.py
src/pipeline_codegen/llm/: __init__.py  client.py  config.py
src/pipeline_codegen/verification/: verifier.py
tests/: helpers.py  test_cli.py  test_e2e_conformance.py  test_generation_snapshots.py  test_kb_cli_integration.py  test_kb_packs.py  test_kb_resolver.py  test_kb_service.py  test_kb_service_settings.py  test_llm_client.py  test_llm_config.py  test_mapping_errors.py  test_mapping_snapshots.py  test_opos_e2e_suite.py  test_resources.py  test_verifier.py
tests/_tmp_snapshot/airflow/: artifacts.json  pipeline.py
tests/_tmp_snapshot/dagster/: artifacts.json  definitions.py
tests/_tmp_snapshot/kestra/: artifacts.json
tests/snapshots/: artifact_ok_sequential_airflow.txt  artifact_ok_sequential_dagster.txt  artifact_ok_sequential_kestra.txt  artifact_ok_sequential_prefect.txt  declarative_projection_ok_sequential_kestra.json  target_ir_ok_sequential_airflow.json  target_ir_ok_sequential_dagster.json  target_ir_ok_sequential_kestra.json  target_ir_ok_sequential_prefect.json
(+71 files in other folders)
