[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-codegen"
version = "0.1.0"
description = "OPOS to orchestrator code generation via OrchMapper"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "OPOS Contributors"}]
dependencies = [
  "PyYAML>=6.0.1",
  "jsonschema>=4.22.0",
  "typer>=0.16.0",
  "rich>=13.7.0",
  "python-dotenv>=1.0.1",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "exa-py>=1.8.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-PyYAML>=6.0.12",
  "types-jsonschema>=4.25.1",
]

[project.scripts]
opos-generate = "pipeline_codegen.cli.generate:main"
opos-llm-client = "pipeline_codegen.llm.client:main"
opos-kb-service = "pipeline_codegen.kb_service.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pipeline_codegen = [
  "resources/schemas/*.json",
  "resources/profiles/*/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
exclude = ["tests/_tmp_snapshot", "samples/generated_workflows_proof"]
